--- a/Zhihu.Universal/Zhihu/View/Article/ArticlePage.xaml
+++ b/Zhihu.Universal/Zhihu/View/Article/ArticlePage.xaml
@@ -15,7 +15,7 @@
 
     <Page.Resources>
         <DataTemplate x:Key="ArticleHeaderTemplate">
-            <Grid>
+            <Grid Margin="0 0 0 0">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
@@ -39,7 +39,7 @@
                            Style="{StaticResource TitleStyle}"/>
 
                 <!--Author-->
-                <Grid Grid.Row="3" MinHeight="40" Margin="0 25 0 25" Tapped="ArticleAuthor_OnTapped">
+                <Grid Grid.Row="3" MinHeight="40" Margin="0 15 0 15" Tapped="ArticleAuthor_OnTapped">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="*"/>
@@ -87,7 +87,7 @@
         </Grid.RowDefinitions>
 
         <!--Article Content-->
-        <controls:RichBlock Grid.Row="0" Margin="0 20 0 0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
+        <controls:RichBlock Grid.Row="0" Margin="0 0 0 0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
                             FooterTemplate="{StaticResource FooterTemplate}"
                             HeaderTemplate="{StaticResource ArticleHeaderTemplate}"
                             Paragraphs="{Binding Path=Detail.Content, Converter={StaticResource HtmlConverter}}"/>
