--- a/Zhihu.Universal/Zhihu/View/Profile/ProfilePage.xaml
+++ b/Zhihu.Universal/Zhihu/View/Profile/ProfilePage.xaml
@@ -129,13 +129,8 @@
                             Foreground="{StaticResource FollowForeBrush}"
                             Background="{StaticResource FollowBackBrush}"
                             Content="私信" HorizontalAlignment="Right"
-                            Visibility="{Binding SelfVisibility}">
-                        <interactivity:Interaction.Behaviors>
-                            <core:EventTriggerBehavior EventName="Tapped">
-                                <core:InvokeCommandAction Command="{Binding NavToMessagePage, Mode=OneWay}"/>
-                            </core:EventTriggerBehavior>
-                        </interactivity:Interaction.Behaviors>
-                    </Button>
+                            Visibility="{Binding SelfVisibility}"
+                            Tapped="NavToMessage_Tapped"/>
 
                     <Button Grid.Column="5" Margin="6 0 12 0" Padding="6 3 6 3" FontSize="16"
                             BorderThickness="0"
