change the upper voting button and voting flyout to make it looks better

--- a/Zhihu.Universal/Zhihu/View/Answer/AnswerPage.xaml
+++ b/Zhihu.Universal/Zhihu/View/Answer/AnswerPage.xaml
@@ -107,9 +107,10 @@
                                Style="{StaticResource AuthorHeadLineStyle}"/>
                 </Grid>
 
-                <Border Grid.Row="2" Grid.Column="1" Margin="10 5 10 5" Style="{StaticResource VerticalLineStyle}"/>
-                <Button Grid.Row="2" Grid.Column="2" Margin="10 0 15 0" Style="{StaticResource FlatButtonStyle}" Flyout="{StaticResource VoteFlyout}">
-                    <Grid>
+                <!-- upper voting button -->
+                <Border Grid.Row="2" Grid.Column="1" Margin="5 5 5 5" Style="{StaticResource VerticalLineStyle}"/>
+                <Button Grid.Row="2" Grid.Column="2" Margin="5 0 10 0" Style="{StaticResource FlatButtonStyle}" Flyout="{StaticResource VoteFlyout}">
+                    <Grid Height="42" HorizontalAlignment="Center" VerticalAlignment="Center">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto"/>
                             <ColumnDefinition Width="Auto"/>
@@ -118,11 +119,11 @@
                             <RowDefinition Height="*"/>
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
-                        <Image Grid.Row="0" Grid.Column="0" Height="18" Margin="0 0 0 0" VerticalAlignment="Bottom" Source="{Binding Path=Relationship.Voting, Converter={StaticResource VotingToImageConverter}, ConverterParameter=up}"/>
-                        <Image Grid.Row="1" Grid.Column="0" Height="18" Margin="0 0 0 0" VerticalAlignment="Top" Source="{Binding Path=Relationship.Voting, Converter={StaticResource VotingToImageConverter}, ConverterParameter=down}"/>
+                        <Image Grid.Row="0" Grid.Column="0" Height="12" VerticalAlignment="Bottom" Source="{Binding Path=Relationship.Voting, Converter={StaticResource VotingToImageConverter}, ConverterParameter=up}"/>
+                        <Image Grid.Row="1" Grid.Column="0" Height="12" VerticalAlignment="Top" Source="{Binding Path=Relationship.Voting, Converter={StaticResource VotingToImageConverter}, ConverterParameter=down}"/>
 
-                        <TextBlock Grid.Row="0" Grid.RowSpan="2" Grid.Column="1" MinWidth="30"
-                                                   Margin="10 0 0 0"
+                        <TextBlock Grid.Row="0" Grid.RowSpan="2" Grid.Column="1" MinWidth="28"
+                                                   Margin="8 0 0 0"
                                                    Text="{Binding Detail.VoteupCount, Converter={StaticResource CountConverter}}" 
                                                    FontWeight="Bold" 
                                                    FontSize="{Binding Source={StaticResource ThemeHelper}, Path=Theme.FeedSummary}" 
@@ -212,7 +213,7 @@
 
                 <Button Grid.Row="1" Grid.Column="1" Style="{StaticResource FlatButtonStyle}">
                     <StackPanel Orientation="Vertical">
-                        <Image Height="90" VerticalAlignment="Bottom" Source="{Binding Path=Relationship.Voting, Converter={StaticResource VotingToImageConverter}, ConverterParameter=up}"/>
+                        <Image Height="45" Margin="10, 17, 10, 23" VerticalAlignment="Bottom" Source="{Binding Path=Relationship.Voting, Converter={StaticResource VotingToImageConverter}, ConverterParameter=up}"/>
                         <TextBlock Text="赞同" HorizontalAlignment="Center" FontSize="{Binding Source={StaticResource ThemeHelper}, Path=Theme.FeedSummary}" Style="{StaticResource SummaryStyle}"/>
                     </StackPanel>
                     <interactivity:Interaction.Behaviors>
@@ -224,7 +225,7 @@
 
                 <Button Grid.Row="1" Grid.Column="3" Style="{StaticResource FlatButtonStyle}">
                     <StackPanel>
-                        <Image Height="90" VerticalAlignment="Top" Source="{Binding Path=Relationship.Voting, Converter={StaticResource VotingToImageConverter}, ConverterParameter=down}"/>
+                        <Image Height="45" Margin="10, 17, 10, 23" Source="{Binding Path=Relationship.Voting, Converter={StaticResource VotingToImageConverter}, ConverterParameter=down}"/>
                         <TextBlock Text="反对" HorizontalAlignment="Center" FontSize="{Binding Source={StaticResource ThemeHelper}, Path=Theme.FeedSummary}" Style="{StaticResource SummaryStyle}"/>
                     </StackPanel>
                     <interactivity:Interaction.Behaviors>
@@ -254,7 +255,7 @@
         <controls:ImageViewerHelper Grid.Row="0" ImageRuns="{Binding Detail.Content, Converter={StaticResource ImageExtractConverter}}"/>
 
         <!--Answer Content-->
-        <controls:RichBlock Grid.Row="0" Margin="0 0 0 0" HeaderTemplate="{StaticResource AnswerHeader}" 
+        <controls:RichBlock Grid.Row="0" HeaderTemplate="{StaticResource AnswerHeader}" 
                             FooterTemplate="{StaticResource FooterTemplate}"
                             HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  
                             Paragraphs="{Binding Detail.Content, Converter={StaticResource HtmlConverter}, ConverterParameter='True'}" />
@@ -266,6 +267,7 @@
                     Foreground="{StaticResource AppBarForeBrush}"
                     HorizontalAlignment="Stretch" 
                     HorizontalContentAlignment="Stretch">
+
             <AppBarButton Icon="Like" Label="{Binding Detail.VoteupCount, Converter={StaticResource VoteupCountingConverter}}" >
                 <AppBarButton.Foreground>
                     <SolidColorBrush Color="{Binding Path=Relationship.Voting, ConverterParameter=1, Converter={StaticResource VotingToHighlightConverter}}"/>
