--- a/Zhihu.Universal/Zhihu/View/Answer/AnswerPage.xaml
+++ b/Zhihu.Universal/Zhihu/View/Answer/AnswerPage.xaml
@@ -268,7 +268,7 @@
                     HorizontalAlignment="Stretch" 
                     HorizontalContentAlignment="Stretch">
             <!-- lower voting button -->
-            <AppBarButton Flyout="{StaticResource VoteFlyout}" Visibility="{Binding Path=Theme.LowerVotingButtonVisiblity, Source={StaticResource ThemeHelper}}">
+            <AppBarButton Label="投票" Flyout="{StaticResource VoteFlyout}" Visibility="{Binding Path=Theme.LowerVotingButtonVisiblity, Source={StaticResource ThemeHelper}}">
                 <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto"/>
@@ -290,6 +290,7 @@
                                                        Style="{StaticResource VoteStyle}"/>
             </Grid>
             </AppBarButton>
+            <!-- up-vote button-->
             <AppBarButton Icon="Like" Label="{Binding Detail.VoteupCount, Converter={StaticResource VoteupCountingConverter}}" >
                 <AppBarButton.Foreground>
                     <SolidColorBrush Color="{Binding Path=Relationship.Voting, ConverterParameter=1, Converter={StaticResource VotingToHighlightConverter}}"/>
@@ -300,6 +301,7 @@
                     </core:EventTriggerBehavior>
                 </interactivity:Interaction.Behaviors>
             </AppBarButton>
+            <!-- down-vote button -->
             <AppBarButton Icon="Dislike" Label="反对">
                 <AppBarButton.Foreground>
                     <SolidColorBrush Color="{Binding Path=Relationship.Voting, ConverterParameter=-1, Converter={StaticResource VotingToHighlightConverter}}"/>
@@ -309,53 +311,92 @@
                         <core:InvokeCommandAction Command="{Binding VoteDownTapped, Mode=OneWay}"/>
                     </core:EventTriggerBehavior>
                 </interactivity:Interaction.Behaviors>
-            </AppBarButton>           
-                      
+            </AppBarButton>
+            <!-- like button-->
+            <AppBarButton Label="{Binding Path=Relationship.IsThanked, Converter={StaticResource ThankedConverter}}">
+                <TextBlock FontFamily="Segoe MDL2 Assets" FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Center" Text=""/>
+                <AppBarButton.Foreground>
+                    <SolidColorBrush Color="{Binding Path=Relationship.IsThanked, Converter={StaticResource BoolToHighlightConverter}}"/>
+                </AppBarButton.Foreground>
+                <interactivity:Interaction.Behaviors>
+                    <core:EventTriggerBehavior EventName="Tapped">
+                        <core:InvokeCommandAction Command="{Binding AnswerThankTapped, Mode=OneWay}"/>
+                    </core:EventTriggerBehavior>
+                </interactivity:Interaction.Behaviors>
+            </AppBarButton>
+            <!-- Not Helpful button -->
+            <AppBarButton Icon="Flag" Label="{Binding Path=Relationship.IsNotHelp, Converter={StaticResource NoHelpConverter}}">
+                <AppBarButton.Foreground>
+                    <SolidColorBrush Color="{Binding Path=Relationship.IsNotHelp, Converter={StaticResource BoolToHighlightConverter}}"/>
+                </AppBarButton.Foreground>
+                <interactivity:Interaction.Behaviors>
+                    <core:EventTriggerBehavior EventName="Tapped">
+                        <core:InvokeCommandAction Command="{Binding AnswerNoHelpTapped, Mode=OneWay}"/>
+                    </core:EventTriggerBehavior>
+                </interactivity:Interaction.Behaviors>
+            </AppBarButton>
+            <!-- add to collection button -->
+            <AppBarButton Icon="OutlineStar" Label="加入收藏" Flyout="{StaticResource CollectionFlyout}">
+                <AppBarButton.Foreground>
+                    <SolidColorBrush Color="{Binding Path=Relationship.IsFavorited, Converter={StaticResource BoolToHighlightConverter}}"/>
+                </AppBarButton.Foreground>
+            </AppBarButton>
+            <!-- comment button -->
             <AppBarButton Icon="Comment" Label="{Binding Path=Detail.CommentCount, Converter={StaticResource CommentsCountConverter}}"
                           Foreground="{StaticResource AppBarForeBrush}"
                           Tapped="ShowComments_OnTapped"/>
+            <!-- Share to Wechat Button-->
+            <AppBarButton Icon="Globe" Label="分享至微信">
+                <interactivity:Interaction.Behaviors>
+                    <core:EventTriggerBehavior EventName="Tapped">
+                        <core:InvokeCommandAction Command="{Binding ShareViaWeChat, Mode=OneWay}"/>
+                    </core:EventTriggerBehavior>
+                </interactivity:Interaction.Behaviors>
+            </AppBarButton>            
+            <!-- Open with Edge Button-->
+            <AppBarButton Icon="NewWindow" Label="Edge 打开">
+                <interactivity:Interaction.Behaviors>
+                    <core:EventTriggerBehavior EventName="Tapped">
+                        <core:InvokeCommandAction Command="{Binding OpenWithEdge, Mode=OneWay}"/>
+                    </core:EventTriggerBehavior>
+                </interactivity:Interaction.Behaviors>
+            </AppBarButton>
 
             <CommandBar.SecondaryCommands>
-                <AppBarButton Label="投票" Flyout="{StaticResource VoteFlyout}" Visibility="{Binding Path=Theme.LowerVotingButtonSecondaryVisiblity, Source={StaticResource ThemeHelper}}"/>
-                    <AppBarButton Icon="Globe" Label="分享至微信">
+                <!-- share to wechat button -->    
+                <AppBarButton Icon="Globe" Label="分享至微信">
                     <interactivity:Interaction.Behaviors>
                         <core:EventTriggerBehavior EventName="Tapped">
                             <core:InvokeCommandAction Command="{Binding ShareViaWeChat, Mode=OneWay}"/>
                         </core:EventTriggerBehavior>
                     </interactivity:Interaction.Behaviors>
                 </AppBarButton>
-                <AppBarButton Icon="NewWindow" Label="Open with Edge">
+                <!-- Open With Edge Button -->
+                <AppBarButton Icon="NewWindow" Label="Edge 打开">
                     <interactivity:Interaction.Behaviors>
                         <core:EventTriggerBehavior EventName="Tapped">
                             <core:InvokeCommandAction Command="{Binding OpenWithEdge, Mode=OneWay}"/>
                         </core:EventTriggerBehavior>
                     </interactivity:Interaction.Behaviors>
                 </AppBarButton>
-                <AppBarButton Icon="Like" Label="{Binding Path=Relationship.IsThanked, Converter={StaticResource ThankedConverter}}">
-<!--                   <AppBarButton.Foreground>-->
-<!--                       <SolidColorBrush Color="{Binding Path=Relationship.IsThanked, Converter={StaticResource BoolToHighlightConverter}}"/>-->
-<!--                   </AppBarButton.Foreground>-->
-                   <interactivity:Interaction.Behaviors>
+                <!-- Like Button -->
+                <AppBarButton Label="{Binding Path=Relationship.IsThanked, Converter={StaticResource ThankedConverter}}">
+                    <interactivity:Interaction.Behaviors>
                        <core:EventTriggerBehavior EventName="Tapped">
                            <core:InvokeCommandAction Command="{Binding AnswerThankTapped, Mode=OneWay}"/>
                        </core:EventTriggerBehavior>
                    </interactivity:Interaction.Behaviors>
                 </AppBarButton>
+                <!-- Not Helpful Button -->
                 <AppBarButton Icon="Flag" Label="{Binding Path=Relationship.IsNotHelp, Converter={StaticResource NoHelpConverter}}">
-<!--                    <AppBarButton.Foreground>-->
-<!--                        <SolidColorBrush Color="{Binding Path=Relationship.IsNotHelp, Converter={StaticResource BoolToHighlightConverter}}"/>-->
-<!--                    </AppBarButton.Foreground>-->
                     <interactivity:Interaction.Behaviors>
                         <core:EventTriggerBehavior EventName="Tapped">
                             <core:InvokeCommandAction Command="{Binding AnswerNoHelpTapped, Mode=OneWay}"/>
                         </core:EventTriggerBehavior>
                     </interactivity:Interaction.Behaviors>
                 </AppBarButton>
-                <AppBarButton Icon="OutlineStar" Label="加入收藏" Flyout="{StaticResource CollectionFlyout}">
-<!--                    <AppBarButton.Foreground>-->
-<!--                        <SolidColorBrush Color="{Binding Path=Relationship.IsFavorited, Converter={StaticResource BoolToHighlightConverter}}"/>-->
-<!--                    </AppBarButton.Foreground>-->
-                </AppBarButton>
+                <!-- add to collection Button-->
+                <AppBarButton Icon="OutlineStar" Label="加入收藏" Flyout="{StaticResource CollectionFlyout}"/>
             </CommandBar.SecondaryCommands>
         </CommandBar>   
     </Grid>
