--- a/Zhihu.Universal/Zhihu/View/SettingPage.xaml
+++ b/Zhihu.Universal/Zhihu/View/SettingPage.xaml
@@ -183,42 +183,43 @@
                                           Foreground="{StaticResource FeedTitleBrush}" 
                                           HeaderTemplate="{StaticResource ToggleSwitchHeader}"
                                           FontSize="{Binding Source={StaticResource ThemeHelper}, Path=Theme.FeedSummary}"
-                                          IsOn="{Binding Path=Theme.LowerVotingButtonVisiable, Mode=TwoWay, Source={StaticResource ThemeHelper}}"/>
+                                          IsOn="{Binding Path=Theme.UpperVotingButtonVisiable, Mode=TwoWay, Source={StaticResource ThemeHelper}}"/>
 
                         <ToggleSwitch Margin="0 0 0 10" HorizontalAlignment="Stretch"
                                           Header="下方投票按钮" OnContent="只显示一个投票按钮" OffContent="分开为赞同和反对两个按钮"
                                           Foreground="{StaticResource FeedTitleBrush}" 
                                           HeaderTemplate="{StaticResource ToggleSwitchHeader}"
                                           FontSize="{Binding Source={StaticResource ThemeHelper}, Path=Theme.FeedSummary}"
-                                          IsOn="{Binding Path=Theme.LowerVotingButtonVisiable, Mode=TwoWay, Source={StaticResource ThemeHelper}}"/>
+                                          IsOn="{Binding Path=Theme.LowerVotingButtonVisiable, Mode=TwoWay, Source={StaticResource ThemeHelper}}"
+                                          Toggled="LowerVotingButtonDisplayModeToggle"/>
 
                         <ToggleSwitch Margin="0 0 0 10" HorizontalAlignment="Stretch"
                                           Header="感谢按钮" OnContent="在下方命令栏中显示" OffContent="在二级菜单中显示"
                                           Foreground="{StaticResource FeedTitleBrush}" 
                                           HeaderTemplate="{StaticResource ToggleSwitchHeader}"
                                           FontSize="{Binding Source={StaticResource ThemeHelper}, Path=Theme.FeedSummary}"
-                                          IsOn="{Binding Path=Theme.LowerVotingButtonVisiable, Mode=TwoWay, Source={StaticResource ThemeHelper}}"/>
+                                          IsOn="{Binding Path=Theme.ThanksButtonVisiable, Mode=TwoWay, Source={StaticResource ThemeHelper}}"/>
 
                         <ToggleSwitch Margin="0 0 0 10" HorizontalAlignment="Stretch"
                                           Header="没有帮助按钮" OnContent="在下方命令栏中显示" OffContent="在二级菜单中显示"
                                           Foreground="{StaticResource FeedTitleBrush}" 
                                           HeaderTemplate="{StaticResource ToggleSwitchHeader}"
                                           FontSize="{Binding Source={StaticResource ThemeHelper}, Path=Theme.FeedSummary}"
-                                          IsOn="{Binding Path=Theme.LowerVotingButtonVisiable, Mode=TwoWay, Source={StaticResource ThemeHelper}}"/>
+                                          IsOn="{Binding Path=Theme.NotHelpfullButtonVisiable, Mode=TwoWay, Source={StaticResource ThemeHelper}}"/>
 
                         <ToggleSwitch Margin="0 0 0 10" HorizontalAlignment="Stretch"
                                           Header="加入收藏按钮" OnContent="在下方命令栏中显示" OffContent="在二级菜单中显示"
                                           Foreground="{StaticResource FeedTitleBrush}" 
                                           HeaderTemplate="{StaticResource ToggleSwitchHeader}"
                                           FontSize="{Binding Source={StaticResource ThemeHelper}, Path=Theme.FeedSummary}"
-                                          IsOn="{Binding Path=Theme.LowerVotingButtonVisiable, Mode=TwoWay, Source={StaticResource ThemeHelper}}"/>
+                                          IsOn="{Binding Path=Theme.AddToCollectionButtonVisiable, Mode=TwoWay, Source={StaticResource ThemeHelper}}"/>
                         
                         <ToggleSwitch Margin="0 0 0 10" HorizontalAlignment="Stretch"
-                                          Header="Edge 打开按钮" OnContent="在下方命令栏中显示" OffContent="在二级菜单中显示"
+                                          Header="打开评论按钮" OnContent="在下方命令栏中显示" OffContent="在二级菜单中显示"
                                           Foreground="{StaticResource FeedTitleBrush}" 
                                           HeaderTemplate="{StaticResource ToggleSwitchHeader}"
                                           FontSize="{Binding Source={StaticResource ThemeHelper}, Path=Theme.FeedSummary}"
-                                          IsOn="{Binding Path=Theme.LowerVotingButtonVisiable, Mode=TwoWay, Source={StaticResource ThemeHelper}}"/>
+                                          IsOn="{Binding Path=Theme.CommentButtonVisiable, Mode=TwoWay, Source={StaticResource ThemeHelper}}"/>
                         
                         <ToggleSwitch Margin="0 0 0 10" HorizontalAlignment="Stretch"
                                           Header="分享到微信按钮" OnContent="在下方命令栏中显示" OffContent="在二级菜单中显示"
@@ -226,6 +227,13 @@
                                           HeaderTemplate="{StaticResource ToggleSwitchHeader}"
                                           FontSize="{Binding Source={StaticResource ThemeHelper}, Path=Theme.FeedSummary}"
                                           IsOn="{Binding Path=Theme.LowerVotingButtonVisiable, Mode=TwoWay, Source={StaticResource ThemeHelper}}"/>
+
+                        <ToggleSwitch Margin="0 0 0 10" HorizontalAlignment="Stretch"
+                                          Header="Edge 打开按钮" OnContent="在下方命令栏中显示" OffContent="在二级菜单中显示"
+                                          Foreground="{StaticResource FeedTitleBrush}" 
+                                          HeaderTemplate="{StaticResource ToggleSwitchHeader}"
+                                          FontSize="{Binding Source={StaticResource ThemeHelper}, Path=Theme.FeedSummary}"
+                                          IsOn="{Binding Path=Theme.OpenWithEdgeButtonVisiable, Mode=TwoWay, Source={StaticResource ThemeHelper}}"/>
 
                     </StackPanel>
                 </PivotItem>
